test/tests/stages/8_loops/valid/extra_credit/switch_no_case.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(4)
  ;
  switch
  (
  identifier(a)
  )
  return
  const int(0)
  ;
  return
  identifier(a)
  ;
  }
