test/tests/stages/8_loops/invalid_semantics/extra_credit/labeled_break_outside_loop.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[14]:
  int
  identifier(main)
  (
  void
  )
  {
  identifier(label)
  :
  break
  ;
  return
  const int(0)
  ;
  }
